== 0.3.12 (In Git)

=== Bugfixes
* JUnit formatter uses original file name instead of narrative to avoid accidental duplicate XML files (Aslak Hellesøy)
* rake gems no longer lists cucumber as a [F]ramework gem (David Chelimsky)
* CLI issues correct exit code when using --drb. Requires Spork version >= 0.5.1. (#355 Ben Mabey)
* Make sure script/generate cucumber --spork uses the cucumber Rails environment (Philippe Lafoucrière)

=== New Features
* Support specifying environment variables using foo=bar syntax on command line or in profiles (#362 Bryan Helmkamp)
* Display failing scenarios at the end of pretty format to make it easier for people to play them back (#360 Ryan Bigg)

=== Changed Features
* The data returned from Table#hashes and similar methods are frozen. Dup if you need to modify. (Aslak Hellesøy)

== 0.3.11 2009-06-05

This release just fixes a tiny bug in the formatter to fix an incompatibility
with the latest RedMine release. It should have been included in 0.3.10, but
was forgotten.

=== Bugfixes
* Formatter API was broken in 0.3.9 (Roman Chernyatchik)

== 0.3.10 2009-06-05

The Spork Release!

This release has an exciting new feature - a new --drb switch! This magic switch lets you run your
features much faster than before, because you can eliminate the startup time for your code. This is
thanks to a brand new gem called Spork by Tim Harper and Ben Mabey. (You can find out more about Spork 
here: http://github.com/timcharper/spork/tree/master). You can start Spork and have it preload your 
application in a separate process. Spork listens for DRb connections, and when you run cucumber with 
--drb the features will run inside the Spork server instead. Spork provides two simple hooks for preloading 
your application - one for framework/stable code (Spork.prefork) and one for the code that *you* write and 
change often (Spork.each_run). Keep in mind that all World, Before, and other Cucumber hooks need to be